Fixed win / lose screen on mobile

--- a/src/css/GameOver.scss
+++ b/src/css/GameOver.scss
@@ -7,8 +7,6 @@
 
 	.bar{
 		background-image: url(../../static/assets/images/gui/BarGameOver.png);
-		width: 100%;
-		height: 218px;
 	}
 	.sun{
 		background-image: url(../../static/assets/images/gui/Moon_Big.png);
