--- a/src/css/WinScreen.scss
+++ b/src/css/WinScreen.scss
@@ -122,20 +122,36 @@
 
 @media only screen and (max-width: 820px){
 	.winscreen{
+
+		.bar{
+			height: 112px;
+		}
+
 		transform: translate(0, -32%);
 		.header{
-			top: -134px;
+			transform: scale(0.8);
+			top: -102px;
 			left: 12px;
 		}
 		.time{
 			left: 50%;
-			transform: translate(-50%, 0);
+			transform: translate(-50%, 0) scale(0.5);
+			top: 52px;
 		}
 		.buttons{
 			max-width: 400px;
     		justify-content: center;
 			flex-wrap: wrap;
 			margin: auto;
+		}
+
+		.sun{
+			transform: scale(0.8);
+		}
+
+		.voting{
+			transform: scale(0.8);
+			top: -10px;
 		}
 	}
 }
